--- a/02-todo-web-application-h2.yml
+++ b/02-todo-web-application-h2.yml
@@ -30,3 +30,8 @@ stages:
         SourceFolder: '$(system.defaultworkingdirectory)'
         Contents: '**/*.war'
         TargetFolder: '$(Build.ArtifactStagingDirectory)'
+    - task: PublishBuildArtifacts@1
+      inputs:
+        PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+        ArtifactName: 'drop'
+        publishLocation: 'Container'
