Update 02-todo-web-application-h2.yml for Azure Pipelines

--- a/02-todo-web-application-h2.yml
+++ b/02-todo-web-application-h2.yml
@@ -35,3 +35,33 @@ stages:
         PathtoPublish: '$(Build.ArtifactStagingDirectory)'
         ArtifactName: 'drop'
         publishLocation: 'Container'
+      
+- stage: CreateWebapp
+  jobs:
+  - deployment: DeployToWebapp
+    environment: Production
+    strategy:
+      runOnce:
+        deploy:
+          steps:
+          - task: AzureResourceManagerTemplateDeployment@3
+            inputs:
+              deploymentScope: 'Resource Group'
+              azureResourceManagerConnection: 'FreeOneYear(5f7292bd-e975-43ef-aa61-1871cb2a573d)'
+              subscriptionId: '5f7292bd-e975-43ef-aa61-1871cb2a573d'
+              action: 'Create Or Update Resource Group'
+              resourceGroupName: '$(resourceGroup)'
+              location: '$(location)'
+              templateLocation: 'Linked artifact'
+              csmFile: 'templates/webapp-sp.json'
+              csmParametersFile: 'templates/webapp-sp.parameters.json'
+              overrideParameters: '-hostingPlanName $(hostingPlanName) -location $(location) -webSiteName $(webSiteName) -skuName $(skuName)'
+              deploymentMode: 'Incremental'
+- stage: DeployToWebapp
+  jobs:
+  - deployment: DeployToWebapp
+    environment: Production
+    strategy:
+      runOnce:
+        deploy:
+          steps:
