Update 02-todo-web-application-h2.yml for Azure Pipelines

--- a/02-todo-web-application-h2.yml
+++ b/02-todo-web-application-h2.yml
@@ -37,7 +37,7 @@ stages:
         publishLocation: 'Container'
 - stage: Create the templates for webapp
   jobs:
-  - job: App Service Json
+  - job: App_Service_Json
     pool:
       vmImage: 'ubuntu-latest'
     steps:
