Update 02-todo-web-application-h2.yml for Azure Pipelines

--- a/02-todo-web-application-h2.yml
+++ b/02-todo-web-application-h2.yml
@@ -35,7 +35,7 @@ stages:
         PathtoPublish: '$(Build.ArtifactStagingDirectory)'
         ArtifactName: 'drop'
         publishLocation: 'Container'
-- stage: Create the templates for webapp
+- stage: Create-templates-for-webapp
   jobs:
   - job: App_Service_Json
     pool:
