Update 02-todo-web-application-h2.yml for Azure Pipelines

--- a/02-todo-web-application-h2.yml
+++ b/02-todo-web-application-h2.yml
@@ -54,7 +54,7 @@ stages:
         
 - stage: CreateWebapp
   jobs:
-  - deployment: DeployToWebapp
+  - deployment: CreateWebapp
     environment: Production
     strategy:
       runOnce:
