change template file

--- a/templates/webapp-sb.json
+++ b/templates/webapp-sb.json
@@ -105,7 +105,9 @@
                     "appSettings": [],
                     "linuxFxVersion": "[parameters('linuxFxVersion')]",
                     "alwaysOn": "[parameters('alwaysOn')]"
-                }
+                },
+        "clientAffinityEnabled": false
+      }
       },
       "resources": [
         {
