--- a/templates/webapp-sb.json
+++ b/templates/webapp-sb.json
@@ -84,7 +84,8 @@
         "capacity": "[parameters('skuCapacity')]"
       },
       "properties": {
-        "name": "[parameters('hostingPlanName')]"
+        "name": "[parameters('hostingPlanName')]",
+        "reserved": true
       }
     },
     {
