Update 03-todo-web-application-mysql.yml for Azure Pipelines

--- a/03-todo-web-application-mysql.yml
+++ b/03-todo-web-application-mysql.yml
@@ -34,9 +34,9 @@ stages:
         PathtoPublish: '$(Build.ArtifactStagingDirectory)'
         ArtifactName: 'drop'
         publishLocation: 'Container'
-- stage: CreateWebapp
+- stage: DeployToWebapp
   jobs:
-  - deployment: CreateWebapp
+  - deployment: DeployToWebapp
     environment: Production
     strategy:
       runOnce:
