--- a/03-todo-web-application-mysql.yml
+++ b/03-todo-web-application-mysql.yml
@@ -48,5 +48,5 @@ stages:
               azureSubscription: 'FreeOneYear(5f7292bd-e975-43ef-aa61-1871cb2a573d)'
               appType: 'webAppLinux'
               WebAppName: '$(WebAppName)'
-              packageForLinux: '''$(Pipeline.Workspace)/drop/03-todo-web-application-mysql/target/**/*.war'''
+              packageForLinux: '$(Pipeline.Workspace)/drop/03-todo-web-application-mysql/target/**/*.war'
               RuntimeStack: 'TOMCAT|9.0-java11'
