--- a/06-todo-rest-api-h2-containerized.yml
+++ b/06-todo-rest-api-h2-containerized.yml
@@ -27,7 +27,7 @@ stages:
     - task: CopyFiles@2
       inputs:
         SourceFolder: '$(system.defaultworkingdirectory)'
-        Contents: '**/*.war'
+        Contents: '**/*.jar'
         TargetFolder: '$(Build.ArtifactStagingDirectory)'
     - task: PublishBuildArtifacts@1
       inputs:
