--- a/06-todo-rest-api-h2-containerized.yml
+++ b/06-todo-rest-api-h2-containerized.yml
@@ -27,10 +27,19 @@ stages:
     - task: CopyFiles@2
       inputs:
         SourceFolder: '$(system.defaultworkingdirectory)'
-        Contents: '**/*.jar'
+        Contents: |
+          **/*.jar
+          Dockerfile
         TargetFolder: '$(Build.ArtifactStagingDirectory)'
     - task: PublishBuildArtifacts@1
       inputs:
         PathtoPublish: '$(Build.ArtifactStagingDirectory)'
         ArtifactName: 'drop'
         publishLocation: 'Container'
+
+# - stage: PackageDokerContainer
+#   jobs:
+#   - job: DockerContainer
+#     pool:
+#       vmImage: 'ubuntu-latest'
+#     steps:
