Update 06-todo-rest-api-h2-containerized.yml for Azure Pipelines

--- a/06-todo-rest-api-h2-containerized.yml
+++ b/06-todo-rest-api-h2-containerized.yml
@@ -29,7 +29,7 @@ stages:
         SourceFolder: '$(system.defaultworkingdirectory)'
         Contents: |
           **/*.jar
-          **/*.Dockerfile
+          **/Dockerfile
         TargetFolder: '$(Build.ArtifactStagingDirectory)'
     - task: PublishBuildArtifacts@1
       inputs:
