Update 06-todo-rest-api-h2-containerized.yml for Azure Pipelines

--- a/06-todo-rest-api-h2-containerized.yml
+++ b/06-todo-rest-api-h2-containerized.yml
@@ -38,9 +38,17 @@ stages:
         ArtifactName: 'drop'
         publishLocation: 'Container'
 
-# - stage: PackageDokerContainer
-#   jobs:
-#   - job: DockerContainer
-#     pool:
-#       vmImage: 'ubuntu-latest'
-#     steps:
+- stage: PackageDokerContainer
+  jobs:
+  - job: DockerContainer
+    pool:
+      vmImage: 'ubuntu-latest'
+    steps:
+    - task: Docker@2
+      inputs:
+        containerRegistry: 'azureRegistry'
+        repository: 'javarepos'
+        command: 'buildAndPush'
+        Dockerfile: '$(Pipeline.Workspace)/drop/'
+        tags: 'todo-rest-api-$(Build.BuildId)'
+
