--- a/06-todo-rest-api-h2-containerized.yml
+++ b/06-todo-rest-api-h2-containerized.yml
@@ -49,6 +49,7 @@ stages:
         containerRegistry: 'azureRegistry'
         repository: 'javarepos'
         command: 'buildAndPush'
-        Dockerfile: '$(Pipeline.Workspace)/drop/'
+        Dockerfile: '$(Build.ArtifactStagingDirectory)'
+        buildContext: '**/drop'
         tags: 'todo-rest-api-$(Build.BuildId)'
 
