Update 06-todo-rest-api-h2-containerized.yml for Azure Pipelines

--- a/06-todo-rest-api-h2-containerized.yml
+++ b/06-todo-rest-api-h2-containerized.yml
@@ -8,35 +8,38 @@ trigger:
 - master
 
 stages:
-# - stage: Build
-#   jobs:
-#   - job: Build_springboot_app
-#     pool:
-#       vmImage: 'ubuntu-latest'
-#     steps:
-#     - task: Maven@3
-#       inputs:
-#         mavenPomFile: '06-todo-rest-api-mysql-containerized/pom.xml'
-#         publishJUnitResults: true
-#         testResultsFiles: '**/surefire-reports/TEST-*.xml'
-#         javaHomeOption: 'JDKVersion'
-#         mavenVersionOption: 'Default'
-#         mavenAuthenticateFeed: false
-#         effectivePomSkip: false
-#         sonarQubeRunAnalysis: false
+- stage: Build
+  jobs:
+  - job: Build_springboot_app
+    pool:
+      vmImage: 'ubuntu-latest'
+    steps:
+    - task: Maven@3
+      inputs:
+        mavenPomFile: '06-todo-rest-api-mysql-containerized/pom.xml'
+        publishJUnitResults: true
+        testResultsFiles: '**/surefire-reports/TEST-*.xml'
+        javaHomeOption: 'JDKVersion'
+        mavenVersionOption: 'Default'
+        mavenAuthenticateFeed: false
+        effectivePomSkip: false
+        sonarQubeRunAnalysis: false
 
-#     - task: CopyFiles@2
-#       inputs:
-#         SourceFolder: '$(system.defaultworkingdirectory)/06-todo-rest-api-mysql-containerized/'
-#         Contents: |
-#           **/*.jar
-#           **/Dockerfile
-#         TargetFolder: '$(Build.ArtifactStagingDirectory)'
-#     - task: PublishBuildArtifacts@1
-#       inputs:
-#         PathtoPublish: '$(Build.ArtifactStagingDirectory)'
-#         ArtifactName: 'drop'
-#         publishLocation: 'Container'
+    - task: CopyFiles@2
+      inputs:
+        SourceFolder: '$(system.defaultworkingdirectory)/06-todo-rest-api-mysql-containerized/'
+        Contents: |
+          **/*.jar
+          **/Dockerfile
+        TargetFolder: '$(Build.ArtifactStagingDirectory)'
+    - task: PublishBuildArtifacts@1
+      inputs:
+        PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+        ArtifactName: 'drop'
+        publishLocation: 'Container'
+    - bash: ls -R  $(System.DefaultWorkingDirectory)
+    - bash: ls -R $(Build.ArtifactStagingDirectory)
+    - bash: ls -R $(Pipeline.Workspace)
 
 - stage: PackageDokerContainer
   jobs:
