Update 06-todo-rest-api-h2-containerized.yml for Azure Pipelines

--- a/06-todo-rest-api-h2-containerized.yml
+++ b/06-todo-rest-api-h2-containerized.yml
@@ -52,6 +52,7 @@ stages:
         containerRegistry: 'azureRegistry'
         repository: 'javarepos'
         command: 'buildAndPush'
-        Dockerfile: '$(Pipeline.Workspace)/drop/Dockerfile'
+        Dockerfile: '$(Pipeline.Workspace)'
+        buildContext: '**/drop/'
         tags: 'todo-rest-api-$(Build.BuildId)'
 
