--- a/06-todo-rest-api-mysql-containerized/Dockerfile
+++ b/06-todo-rest-api-mysql-containerized/Dockerfile
@@ -1,6 +1,8 @@
+ARG WORKSPACE
+ENV WS=$WORKSPACE
 FROM openjdk:8-jdk-alpine
 VOLUME /tmp
 EXPOSE 5000
-ADD target/*.jar app.jar
+ADD $WS/drop/target/*.jar app.jar
 ENV JAVA_OPTS=""
 ENTRYPOINT [ "sh", "-c", "java $JAVA_OPTS -Djava.security.egd=file:/dev/./urandom -jar /app.jar" ]
