--- a/06-todo-rest-api-h2-containerized.yml
+++ b/06-todo-rest-api-h2-containerized.yml
@@ -52,6 +52,6 @@ stages:
         containerRegistry: 'azureRegistry'
         repository: 'javarepos'
         command: 'buildAndPush'
-        Dockerfile: '$(Build.SourcesDirectory)/06-todo-rest-api-mysql-containerized/Dockerfile'
+        Dockerfile: '$(Pipeline.Workspace)/drop/Dockerfile'
         tags: 'todo-rest-api-$(Build.BuildId)'
 
