Update 06-todo-rest-api-h2-containerized.yml for Azure Pipelines

--- a/06-todo-rest-api-h2-containerized.yml
+++ b/06-todo-rest-api-h2-containerized.yml
@@ -28,8 +28,8 @@ stages:
 
     - task: Docker@2
       inputs:
-        containerRegistry: 'azureRegistry'
-        repository: 'javarepos'
+        containerRegistry: 'dockerhub'
+        repository: 'java-todo-rest-api'
         command: 'buildAndPush'
         Dockerfile: '$(Build.SourcesDirectory)/06-todo-rest-api-mysql-containerized/Dockerfile'
         tags: 'todo-rest-api-$(Build.BuildId)'
