--- a/06-todo-rest-api-h2-containerized.yml
+++ b/06-todo-rest-api-h2-containerized.yml
@@ -25,11 +25,14 @@ stages:
         mavenAuthenticateFeed: false
         effectivePomSkip: false
         sonarQubeRunAnalysis: false
-
     - task: Docker@2
       inputs:
         containerRegistry: 'dockerhub'
-        repository: 'java-todo-rest-api'
+        command: 'login'
+    - task: Docker@2
+      inputs:
+        containerRegistry: 'dockerhub'
+        repository: '$(ContainerRepository)'
         command: 'buildAndPush'
         Dockerfile: '$(Build.SourcesDirectory)/06-todo-rest-api-mysql-containerized/Dockerfile'
         tags: 'todo-rest-api-$(Build.BuildId)'
