Update 06-todo-rest-api-h2-containerized.yml for Azure Pipelines

--- a/06-todo-rest-api-h2-containerized.yml
+++ b/06-todo-rest-api-h2-containerized.yml
@@ -35,5 +35,5 @@ stages:
         repository: '$(ContainerRepository)'
         command: 'buildAndPush'
         Dockerfile: '$(Build.SourcesDirectory)/06-todo-rest-api-mysql-containerized/Dockerfile'
-        tags: 'todo-rest-api-$(Build.BuildId)'
+        tags: '$(Build.BuildId)'
 
